--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-12-03  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Darin Adler.
+
+        - fix an ASSERT when getIntIdentifier is called with 0 or -1
+
+        * bindings/npruntime.cpp:
+        (_NPN_GetIntIdentifier): We cannot use the hashmap for 0 and -1 since
+        they are the empty value and the deleted value. Instead, keep the
+        identifiers for those two integers in a static array.
+
 2007-12-02  Darin Adler  <darin@apple.com>
 
         Reviewed by Mitz.
