--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-03  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Darin Adler.
+
+        - added a testGetIntIdentifier() method to TestNetscapePlugIn
+
+        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.c:
+        (pluginInvoke):
+
 2007-12-03  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Oliver.
