Check to see if we are building a debug root
        * Scripts/check-for-global-initializers:

git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28367 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-03  Stephanie  <slewis@apple.com>
+
+        Reviewed by Darin.
+
+        Check to see if we are building a debug root
+
+        * Scripts/check-for-global-initializers: 
+
 2007-12-03  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
