--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,13 @@
+2007-12-03  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Dave Hyatt.
+
+        - fix <rdar://problem/5346452> Resize event doesn't fire on body element inside a frame
+
+        * WebView.cpp:
+        (WebViewWndProc): Removed call to sendResizeEvent() since FrameView
+        sends them now.
+
 2007-12-03  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Adam.
