Reviewed by Adam.
        Make it sexy with awesome icon and tweaks from Tim.

        * templates/index.html.tmpl:
        * wwwroot/ie.css: Added.
        * wwwroot/images/ie-nav-blue.png: Added.
        * wwwroot/planetwebkit.css: Added.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28380 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PlanetWebKit/ChangeLog
+++ b/PlanetWebKit/ChangeLog
@@ -1,3 +1,14 @@
+2007-12-03  Matt Lilek  <webkit@mattlilek.com>
+
+        Reviewed by Adam.
+
+        Make it sexy with awesome icon and tweaks from Tim.
+
+        * templates/index.html.tmpl:
+        * wwwroot/ie.css: Added.
+        * wwwroot/images/ie-nav-blue.png: Added.
+        * wwwroot/planetwebkit.css: Added.
+
 2007-12-01  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Mark Rowe.
