Rubberstamped by Tim.
        Make the bullets lickable.

        * wwwroot/planetwebkit.css:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28381 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/PlanetWebKit/ChangeLog
+++ b/PlanetWebKit/ChangeLog
@@ -1,5 +1,13 @@
 2007-12-03  Matt Lilek  <webkit@mattlilek.com>
 
+        Rubberstamped by Tim.
+
+        Make the bullets lickable.
+
+        * wwwroot/planetwebkit.css:
+
+2007-12-03  Matt Lilek  <webkit@mattlilek.com>
+
         Reviewed by Adam.
 
         Make it sexy with awesome icon and tweaks from Tim.
