2007-12-04  Alp Toker  <alp@atoker.com>
        Fix a clobbered copyright header.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28385 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-04  Alp Toker  <alp@atoker.com>
+
+        Fix a clobbered copyright header.
+
+        * DumpRenderTree/gtk/DumpRenderTree.cpp:
+
 2007-12-04  Xan Lopez  <xan@gnome.org>
 
         Reviewed by Alp Toker.
