Add the missing ChangeLog entries for r28349.
WebCore/ChangeLog:
2007-12-04  Holger Hans Peter Freyther <holger.freyther@trolltech.com>

        Reviewed by Simon.

        * Implement the InspectorClient for the Qt port
        * It does not support highlighting of nodes yet
        * Use QRC to open the internal page. The important thing is the
        '/' in the URL to make WebCore::Document::completeURL behave the
        way we want.
        * To make the InspectorClient work we will have to mark qrc as secure.

        * WebCore.pro:
        * loader/FrameLoader.cpp:
        (WebCore::localSchemes):
        * page/inspector/WebKit.qrc: Added.

WebKit/qt:
2007-12-04  Holger Hans Peter Freyther <holger.freyther@trolltech.com>

        Reviewed by Simon.

        * Implement the InspectorClient for the Qt port
        * It does not support highlighting of nodes yet
        * Use QRC to open the internal page. The important thing is the
        '/' in the URL to make WebCore::Document::completeURL behave the
        way we want.
        * To make the InspectorClient work we will have to mark qrc as secure.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):
        * Api/qwebpage.h:
        * WebCoreSupport/InspectorClientQt.cpp:
        (WebCore::InspectorClientWebPage::hideEvent):
        (WebCore::InspectorClientQt::InspectorClientQt):
        (WebCore::InspectorClientQt::inspectorDestroyed):
        (WebCore::InspectorClientQt::createPage):
        (WebCore::InspectorClientQt::localizedStringsURL):
        (WebCore::InspectorClientQt::showWindow):
        (WebCore::InspectorClientQt::closeWindow):
        (WebCore::InspectorClientQt::attachWindow):
        (WebCore::InspectorClientQt::detachWindow):
        * WebCoreSupport/InspectorClientQt.h:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28387 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,19 @@
+2007-12-04  Holger Hans Peter Freyther <holger.freyther@trolltech.com>
+
+        Reviewed by Simon.
+
+        * Implement the InspectorClient for the Qt port
+        * It does not support highlighting of nodes yet
+        * Use QRC to open the internal page. The important thing is the
+        '/' in the URL to make WebCore::Document::completeURL behave the
+        way we want.
+        * To make the InspectorClient work we will have to mark qrc as secure.
+
+        * WebCore.pro:
+        * loader/FrameLoader.cpp:
+        (WebCore::localSchemes):
+        * page/inspector/WebKit.qrc: Added.
+
 2007-12-04  Alp Toker  <alp@atoker.com>
 
         Rubber stamped by Mark Rowe.
