2007-12-04  Alp Toker  <alp@atoker.com>
        Reviewed by Mark Rowe.

        Link to Planet WebKit.

        * nav.inc:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28390 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-04  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
+        Link to Planet WebKit.
+
+        * nav.inc:
+
 2007-12-02  Adam Roben  <aroben@apple.com>
 
         Add another screenshot
