Windows build fix
        * WebScriptCallFrame.cpp:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28391 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-04  Adam Roben  <aroben@apple.com>
+
+        Windows build fix
+
+        * WebScriptCallFrame.cpp:
+
 2007-12-03  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Dave Hyatt.
