--- a/WebKit/wx/ChangeLog
+++ b/WebKit/wx/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-04  Darin Adler  <darin@apple.com>
+
+        Reviewed by Kevin Decker.
+
+        * WebKitSupport/FrameLoaderClientWx.cpp: Removed obsolete privateBrowsingEnabled.
+        * WebKitSupport/FrameLoaderClientWx.h: Ditto.
+
 2007-12-03  Mark Rowe  <mrowe@apple.com>
 
         wx build fix.
