Hook up the authorAndUserStylesEnabled preference on Windows
 WebKit/win:

         Hook up the authorAndUserStylesEnabled preference

         This is the Windows counterpart of r28071.

         Reviewed by Maciej.

         * Interfaces/IWebPreferencesPrivate.idl: Added new method
         declarations.
         * WebPreferenceKeysPrivate.h: Added a new preference key.
         * WebPreferences.cpp:
         (WebPreferences::initializeDefaultSettings): Set the default for the
         new preference.
         (WebPreferences::setAuthorAndUserStylesEnabled): Added.
         (WebPreferences::authorAndUserStylesEnabled): Added.
         * WebPreferences.h:
         * WebView.cpp:
         (WebView::notifyPreferencesChanged): Communicate the new preference
         down to WebCore::Settings.

 WebKitTools:

         Fix <rdar://5614497> setAuthorAndUserStylesEnabled is not implemented in DRT

         Reviewed by Maciej.

         * DumpRenderTree/win/LayoutTestControllerWin.cpp:
         (LayoutTestController::setAuthorAndUserStylesEnabled): Implemented.

 LayoutTests:

         Remove a now-passing test from the Windows Skipped file

         Reviewed by Maciej.

         * platform/win/Skipped:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28412 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-27  Adam Roben  <aroben@apple.com>
+
+        Remove a now-passing test from the Windows Skipped file
+
+        Reviewed by Maciej.
+
+        * platform/win/Skipped:
+
 2007-12-03  Antti Koivisto  <antti@apple.com>
 
         Reviewed by Adele.
