--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-04  Alp Toker  <alp@atoker.com>
+
+        GTK+ build fix.
+
+        * platform/PlugInInfoStore.h:
+
 2007-12-04  Kevin Decker  <kdecker@apple.com>
 
         Reviewed by Anders.
