Remove IWebScriptScope include.
        * Drosera/win/DebuggerDocumentPlatform.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28432 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-04  Anders Carlsson  <andersca@apple.com>
+
+        Remove IWebScriptScope include.
+        
+        * Drosera/win/DebuggerDocumentPlatform.cpp:
+
 2007-12-04  Sam Weinig  <sam@webkit.org>
 
         Rubber stamped by Mark Rowe.
