2007-12-04  Alp Toker  <alp@atoker.com>
        Potential GTK+ build fix for the glib-genmarshal issue.

        Split the glib-genmarshal qmake generator in two; one for the source
        file, another for the header.

        * WebCore.pro:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28433 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,14 @@
 2007-12-04  Alp Toker  <alp@atoker.com>
 
+        Potential GTK+ build fix for the glib-genmarshal issue.
+
+        Split the glib-genmarshal qmake generator in two; one for the source
+        file, another for the header.
+
+        * WebCore.pro:
+
+2007-12-04  Alp Toker  <alp@atoker.com>
+
         GTK+ build fix.
 
         * platform/PlugInInfoStore.h:
