--- a/WebKit/gtk/ChangeLog
+++ b/WebKit/gtk/ChangeLog
@@ -1,3 +1,14 @@
+2007-12-05  Luca Bruno  <lethalman88@gmail.com>
+
+        Reviewed by Alp Toker.
+
+        Handle events for Home and End keys.
+
+        * WebView/webkitwebview.cpp:
+        (webkit_web_view_key_event):
+        * WebCoreSupport/EditorClientGtk.cpp:
+        (EditorClient::handleKeypress):
+
 2007-12-05  Michael Natterer  <mitch@imendio.com>
 
         Reviewed by Alp Toker.
