--- a/WebKit/gtk/ChangeLog
+++ b/WebKit/gtk/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-05  Michael Natterer  <mitch@imendio.com>
+
+        Reviewed by Alp Toker.
+
+        * WebView/webkitwebview.cpp: split key and button event handlers
+        into separate press and release functions.
+
 2007-12-05  Luca Bruno  <lethalman88@gmail.com>
 
         Reviewed by Alp Toker.
