--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-05  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by Darin Adler.
+
+        - WebKit/win part of fixing <rdar://problem/5111082> Flash popup video ad doesn't close when clicked at http://www.firestonecompleteautocare.com/
+
+        * WebView.cpp:
+        (WebView::initWithFrame): Attach the main frame's view.
+
 2007-12-04  Ada Chan  <adachan@apple.com>
 
         Provide API for setting the default storage quota per database origin
